hopefully fixed images and adjusted footer spacing

--- a/public/style.css
+++ b/public/style.css
@@ -260,7 +260,7 @@ body {
 /*Footer section*/
 .footer{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     background-color: #b5bbff;
     color: white;
@@ -273,6 +273,7 @@ body {
     flex-direction: column;
     align-items: center;
     text-align: center;
+    margin-left: 20px;
 }
 
 .footer-section h3{
